reports/notebooks/01_vib/vib_undamped.err.log
Traceback (most recent call last):
  File "/opt/hostedtoolcache/Python/3.9.17/x64/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/opt/hostedtoolcache/Python/3.9.17/x64/lib/python3.9/site-packages/nbclient/client.py", line 1305, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/hostedtoolcache/Python/3.9.17/x64/lib/python3.9/site-packages/jupyter_core/utils/__init__.py", line 166, in wrapped
    return loop.run_until_complete(inner)
  File "/opt/hostedtoolcache/Python/3.9.17/x64/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/opt/hostedtoolcache/Python/3.9.17/x64/lib/python3.9/site-packages/nbclient/client.py", line 705, in async_execute
    await self.async_execute_cell(
  File "/opt/hostedtoolcache/Python/3.9.17/x64/lib/python3.9/site-packages/nbclient/client.py", line 1058, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/opt/hostedtoolcache/Python/3.9.17/x64/lib/python3.9/site-packages/nbclient/client.py", line 914, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
I = 1
w = 2*np.pi
dt = 0.05
num_periods = 5
P = 2*np.pi/w    #  one period
T = P*num_periods
u, t = solver(I, w, dt, T)
visualize(u, t, I, w)
------------------

----- stderr -----
Equation is not affine w.r.t the target, falling back to standardsympy.solve that may be slow
----- stderr -----
/tmp/devito-jitcache-uid1001/f79d8171926c667d1a5e2a8fcbd01f488f0e038d.c: In function ‘Kernel’:
/tmp/devito-jitcache-uid1001/f79d8171926c667d1a5e2a8fcbd01f488f0e038d.c:42:57: error: array subscript is not an integer
   42 |     u[t + 1] = -3.94784176043574e+1F*r0*h_t*h_t + 2.0F*u[-39*r0] - 1.0F*u[-39*r0 - 1];
      |                                                         ^
/tmp/devito-jitcache-uid1001/f79d8171926c667d1a5e2a8fcbd01f488f0e038d.c:42:74: error: array subscript is not an integer
   42 |     u[t + 1] = -3.94784176043574e+1F*r0*h_t*h_t + 2.0F*u[-39*r0] - 1.0F*u[-39*r0 - 1];
      |                                                                          ^
FAILED compiler invocation: gcc -O3 -g -fPIC -Wall -std=c99 -march=native -Wno-unused-result -Wno-unused-variable -Wno-unused-but-set-variable -ffast-math -shared -fopenmp /tmp/devito-jitcache-uid1001/f79d8171926c667d1a5e2a8fcbd01f488f0e038d.c -lm -o /tmp/devito-jitcache-uid1001/f79d8171926c667d1a5e2a8fcbd01f488f0e038d.so
------------------

[0;31m---------------------------------------------------------------------------[0m
[0;31mCompileError[0m                              Traceback (most recent call last)
Cell [0;32mIn[5], line 7[0m
[1;32m      5[0m P [38;5;241m=[39m [38;5;241m2[39m[38;5;241m*[39mnp[38;5;241m.[39mpi[38;5;241m/[39mw    [38;5;66;03m#  one period[39;00m
[1;32m      6[0m T [38;5;241m=[39m P[38;5;241m*[39mnum_periods
[0;32m----> 7[0m u, t [38;5;241m=[39m [43msolver[49m[43m([49m[43mI[49m[43m,[49m[43m [49m[43mw[49m[43m,[49m[43m [49m[43mdt[49m[43m,[49m[43m [49m[43mT[49m[43m)[49m
[1;32m      8[0m visualize(u, t, I, w)

Cell [0;32mIn[2], line 18[0m, in [0;36msolver[0;34m(I, w, dt, T)[0m
[1;32m     16[0m stencil [38;5;241m=[39m Eq(u[38;5;241m.[39mforward, solve(eqn, u[38;5;241m.[39mforward))
[1;32m     17[0m op [38;5;241m=[39m Operator(stencil)
[0;32m---> 18[0m [43mop[49m[38;5;241;43m.[39;49m[43mapply[49m[43m([49m[43mh_t[49m[38;5;241;43m=[39;49m[43mdt[49m[43m,[49m[43m [49m[43mt_M[49m[38;5;241;43m=[39;49m[43mNt[49m[38;5;241;43m-[39;49m[38;5;241;43m1[39;49m[43m)[49m
[1;32m     19[0m [38;5;28;01mreturn[39;00m u[38;5;241m.[39mdata, np[38;5;241m.[39mlinspace([38;5;241m0[39m, Nt[38;5;241m*[39mdt, Nt[38;5;241m+[39m[38;5;241m1[39m)

File [0;32m~/.local/lib/python3.9/site-packages/devito/operator/operator.py:824[0m, in [0;36mOperator.apply[0;34m(self, **kwargs)[0m
[1;32m    822[0m arg_values [38;5;241m=[39m [args[p[38;5;241m.[39mname] [38;5;28;01mfor[39;00m p [38;5;129;01min[39;00m [38;5;28mself[39m[38;5;241m.[39mparameters]
[1;32m    823[0m [38;5;28;01mtry[39;00m:
[0;32m--> 824[0m     cfunction [38;5;241m=[39m [38;5;28;43mself[39;49m[38;5;241;43m.[39;49m[43mcfunction[49m
[1;32m    825[0m     [38;5;28;01mwith[39;00m [38;5;28mself[39m[38;5;241m.[39m_profiler[38;5;241m.[39mtimer_on([38;5;124m'[39m[38;5;124mapply[39m[38;5;124m'[39m, comm[38;5;241m=[39margs[38;5;241m.[39mcomm):
[1;32m    826[0m         cfunction([38;5;241m*[39marg_values)

File [0;32m~/.local/lib/python3.9/site-packages/devito/operator/operator.py:706[0m, in [0;36mOperator.cfunction[0;34m(self)[0m
[1;32m    704[0m [38;5;250m[39m[38;5;124;03m"""The JIT-compiled C function as a ctypes.FuncPtr object."""[39;00m
[1;32m    705[0m [38;5;28;01mif[39;00m [38;5;28mself[39m[38;5;241m.[39m_lib [38;5;129;01mis[39;00m [38;5;28;01mNone[39;00m:
[0;32m--> 706[0m     [38;5;28;43mself[39;49m[38;5;241;43m.[39;49m[43m_jit_compile[49m[43m([49m[43m)[49m
[1;32m    707[0m     [38;5;28mself[39m[38;5;241m.[39m_lib [38;5;241m=[39m [38;5;28mself[39m[38;5;241m.[39m_compiler[38;5;241m.[39mload([38;5;28mself[39m[38;5;241m.[39m_soname)
[1;32m    708[0m     [38;5;28mself[39m[38;5;241m.[39m_lib[38;5;241m.[39mname [38;5;241m=[39m [38;5;28mself[39m[38;5;241m.[39m_soname

File [0;32m~/.local/lib/python3.9/site-packages/devito/operator/operator.py:691[0m, in [0;36mOperator._jit_compile[0;34m(self)[0m
[1;32m    689[0m [38;5;28;01mif[39;00m [38;5;28mself[39m[38;5;241m.[39m_lib [38;5;129;01mis[39;00m [38;5;28;01mNone[39;00m:
[1;32m    690[0m     [38;5;28;01mwith[39;00m [38;5;28mself[39m[38;5;241m.[39m_profiler[38;5;241m.[39mtimer_on([38;5;124m'[39m[38;5;124mjit-compile[39m[38;5;124m'[39m):
[0;32m--> 691[0m         recompiled, src_file [38;5;241m=[39m [38;5;28;43mself[39;49m[38;5;241;43m.[39;49m[43m_compiler[49m[38;5;241;43m.[39;49m[43mjit_compile[49m[43m([49m[38;5;28;43mself[39;49m[38;5;241;43m.[39;49m[43m_soname[49m[43m,[49m
[1;32m    692[0m [43m                                                          [49m[38;5;28;43mstr[39;49m[43m([49m[38;5;28;43mself[39;49m[38;5;241;43m.[39;49m[43mccode[49m[43m)[49m[43m)[49m
[1;32m    694[0m     elapsed [38;5;241m=[39m [38;5;28mself[39m[38;5;241m.[39m_profiler[38;5;241m.[39mpy_timers[[38;5;124m'[39m[38;5;124mjit-compile[39m[38;5;124m'[39m]
[1;32m    695[0m     [38;5;28;01mif[39;00m recompiled:

File [0;32m~/.local/lib/python3.9/site-packages/devito/arch/compiler.py:339[0m, in [0;36mCompiler.jit_compile[0;34m(self, soname, code)[0m
[1;32m    337[0m [38;5;28;01mwith[39;00m warnings[38;5;241m.[39mcatch_warnings():
[1;32m    338[0m     warnings[38;5;241m.[39msimplefilter([38;5;124m'[39m[38;5;124mignore[39m[38;5;124m'[39m)
[0;32m--> 339[0m     _, _, _, recompiled [38;5;241m=[39m [43mcompile_from_string[49m[43m([49m[38;5;28;43mself[39;49m[43m,[49m[43m [49m[43mtarget[49m[43m,[49m[43m [49m[43mcode[49m[43m,[49m[43m [49m[43msrc_file[49m[43m,[49m
[1;32m    340[0m [43m                                              [49m[43mcache_dir[49m[38;5;241;43m=[39;49m[43mcache_dir[49m[43m,[49m[43m [49m[43mdebug[49m[38;5;241;43m=[39;49m[43mdebug[49m[43m,[49m
[1;32m    341[0m [43m                                              [49m[43msleep_delay[49m[38;5;241;43m=[39;49m[43msleep_delay[49m[43m)[49m
[1;32m    343[0m [38;5;28;01mreturn[39;00m recompiled, src_file

File [0;32m/opt/hostedtoolcache/Python/3.9.17/x64/lib/python3.9/site-packages/codepy/jit.py:439[0m, in [0;36mcompile_from_string[0;34m(toolchain, name, source_string, source_name, cache_dir, debug, wait_on_error, debug_recompile, object, source_is_binary, sleep_delay)[0m
[1;32m    437[0m     toolchain[38;5;241m.[39mbuild_object(ext_file, source_paths, debug[38;5;241m=[39mdebug)
[1;32m    438[0m [38;5;28;01melse[39;00m:
[0;32m--> 439[0m     [43mtoolchain[49m[38;5;241;43m.[39;49m[43mbuild_extension[49m[43m([49m[43mext_file[49m[43m,[49m[43m [49m[43msource_paths[49m[43m,[49m[43m [49m[43mdebug[49m[38;5;241;43m=[39;49m[43mdebug[49m[43m)[49m
[1;32m    441[0m [38;5;28;01mif[39;00m info_path [38;5;129;01mis[39;00m [38;5;129;01mnot[39;00m [38;5;28;01mNone[39;00m:
[1;32m    442[0m     [38;5;28;01mimport[39;00m [38;5;21;01mpickle[39;00m

File [0;32m/opt/hostedtoolcache/Python/3.9.17/x64/lib/python3.9/site-packages/codepy/toolchain.py:211[0m, in [0;36mGCCLikeToolchain.build_extension[0;34m(self, ext_file, source_files, debug)[0m
[1;32m    208[0m [38;5;28;01mimport[39;00m [38;5;21;01msys[39;00m
[1;32m    209[0m [38;5;28mprint[39m([38;5;124m"[39m[38;5;124mFAILED compiler invocation: [39m[38;5;132;01m{}[39;00m[38;5;124m"[39m[38;5;241m.[39mformat([38;5;124m"[39m[38;5;124m [39m[38;5;124m"[39m[38;5;241m.[39mjoin(cc_cmdline)),
[1;32m    210[0m       file[38;5;241m=[39msys[38;5;241m.[39mstderr)
[0;32m--> 211[0m [38;5;28;01mraise[39;00m CompileError([38;5;124m"[39m[38;5;124mmodule compilation failed[39m[38;5;124m"[39m)

[0;31mCompileError[0m: module compilation failed

